WIP: connect to PeopleAPI.
Make it compile. Add slick-pg library to support pg arrays

Added tests for new functionality. Added slick-pg library to support Pg Arrays. Upgraded play and other libraries in order to resolve the issues introduced by slick-pg. Added pact tests.

Process people api response: activate/deactivate users and update access levels. Modified tests. WIP for user deactivation

Added (de)activation of skill on user (de)activation. Added tests. Cleanup

Fixed ui part

fixed tests to use inmemory db

changes for jenkins

cleanup

added scheduler to run the job. switched to embedded postgres for tests

revert embedded postgres changes. add tests for user audit controller

start scheduler when app starts

fix datetime format for postgres and slick
