# app/controllers/TechController.scala
@@ -6,7 +6,7 @@ import javax.inject.{Inject, Singleton}
 import common.{ApiErrors, Authentication}
 import models.{AccessLevel, Tech}
 import play.api.libs.json.{JsError, JsValue, Json}
-import play.api.mvc.{Action, BodyParsers, Controller}
+import play.api.mvc._
 import services.TechService
 import models.ImplicitFormats._
 
@@ -14,17 +14,17 @@ import scala.concurrent._
 import ExecutionContext.Implicits.global
 
 @Singleton
-class TechController @Inject()(techService: TechService, auth: Authentication) extends Controller {
+class TechController @Inject()(techService: TechService, auth: Authentication, components: ControllerComponents) extends AbstractController(components) {
 
-  def getAllTech: Action[Unit] = auth.UserAction(AccessLevel.Basic).async(BodyParsers.parse.empty) { _ =>
+  def getAllTech: Action[Unit] = auth.UserAction(AccessLevel.Basic).async(components.parsers.empty) { _ =>
     techService.getAllTech.map(m => Ok(Json.toJson(m)))
   }
 
-  def search(query: String): Action[Unit] = auth.UserAction().async(BodyParsers.parse.empty) { _ =>
+  def search(query: String): Action[Unit] = auth.UserAction().async(components.parsers.empty) { _ =>
     techService.search(query).map(techs => Ok(Json.toJson(techs)))
   }
 
-  def updateTech(techId: Int): Action[JsValue] = auth.UserAction(AccessLevel.Management).async(BodyParsers.parse.json) { implicit request =>
+  def updateTech(techId: Int): Action[JsValue] = auth.UserAction(AccessLevel.Management).async(components.parsers.json) { implicit request =>
     for {
       updatedTech: Tech <- request.body.validate[Tech]  ?| (err => ApiErrors.badRequest(JsError.toJson(err)))
       _ <- techService.getById(techId)                  ?| ApiErrors.TECH_NOT_FOUND
@@ -32,7 +32,7 @@ class TechController @Inject()(techService: TechService, auth: Authentication) e
     } yield Ok(Json.toJson(updatedTech.copy(id = Some(techId))))
   }
 
-  def removeTech(techId: Int): Action[Unit] = auth.UserAction(AccessLevel.Admin).async(BodyParsers.parse.empty) { _=>
+  def removeTech(techId: Int): Action[Unit] = auth.UserAction(AccessLevel.Admin).async(components.parsers.empty) { _=>
     for {
       _ <- techService.removeTech(techId)  ?| ApiErrors.TECH_NOT_FOUND
     } yield NoContent
